Keyboard "quick access" doesn't work if wm.context_menu_enum is assigned to shortcut #80307

Closed
opened 2020-09-01 05:19:46 +02:00 by Leroy · 4 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: 0330d1af29
Worked: (newest version of Blender that worked as expected)

Short description of error
editor.png
In editor type menu you can press letter on keyboard to quickly select editor type. D for 3D view or U for UV editor.
This doesn't work if editor type menu is opened with custom keyboard shortcut.

Exact steps for others to reproduce the error

  • Assign keyboard shortcut to Editor Type Menu
  • Press shortcut just assigned

Press some letter on keyboard to change editor type

It doesn't work.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: `0330d1af29` Worked: (newest version of Blender that worked as expected) **Short description of error** ![editor.png](https://archive.blender.org/developer/F8827994/editor.png) In editor type menu you can press letter on keyboard to quickly select editor type. D for 3D view or U for UV editor. This doesn't work if editor type menu is opened with custom keyboard shortcut. **Exact steps for others to reproduce the error** - Assign keyboard shortcut to Editor Type Menu - Press shortcut just assigned # Press some letter on keyboard to change editor type It doesn't work.
Author

Added subscriber: @Leroy-Xie

Added subscriber: @Leroy-Xie
Richard Antalik changed title from Shortcut key not work for Editor type context to Keyboard "quick access" doesn't work if wm.context_menu_enum is assigned to shortcut 2020-09-03 20:16:53 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @erminos

Added subscriber: @erminos

Underlined hotkeys don't work in any popup of type Context Enum Menu (wm.context_menu_enum), I can confirm this on Win7/10 with latest 2.93.0-be51d671b500.
But in the UV Select Mode (wm.call_menu) popup they work! image.png
All versions 2.9x seem affected. In 2.83.12 this popup menu have no underlined keys. So, the incomplete feature seems introduced with 2.90 image.png
P.S. a list with those menus (+shortcuts to call them) can be seen in Preferences - Keymap by searching for "context enum menu".image.png

Underlined hotkeys don't work in any popup of type Context Enum Menu (wm.context_menu_enum), I can confirm this on Win7/10 with latest 2.93.0-be51d671b500. But in the UV Select Mode (wm.call_menu) popup they work! ![image.png](https://archive.blender.org/developer/F9895356/image.png) All versions 2.9x seem affected. In 2.83.12 this popup menu have no underlined keys. So, the incomplete feature seems introduced with 2.90 ![image.png](https://archive.blender.org/developer/F9895039/image.png) P.S. a list with those menus (+shortcuts to call them) can be seen in Preferences - Keymap by searching for "context enum menu".![image.png](https://archive.blender.org/developer/F9895009/image.png)
Leon Schittek was assigned by Pratik Borhade 2022-11-17 12:59:04 +01:00
Philipp Oeser removed the
Interest
User Interface
label 2023-02-10 09:24:08 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-13 10:43:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80307
No description provided.